# JERALD

./: .gitignore  CMakeLists.txt  README.md  TEST.py  jaxpops_bind.py  losstest.py  model.py  pmesh.py  pyproject.toml  setup.py
.github/workflows/: test_install.yml
JERALD/: .gitignore  maputils.py  runJERALD.py  snaputils.py  snaputils_nompi.py  utils.py
LDL/: LDL.py  fieldIO.py  loadTNGdata.py
cmake/: FindFFTW.cmake
lib/: cpu.cc  cpu2.cc  parfft.h  parops.h  parops2.h  parops_fast.h
src/jaxpops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
